<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.itemPages.AddItemFragment">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
            app:title="Upload item" />

    </com.google.android.material.appbar.AppBarLayout>

    <ProgressBar
        android:id="@+id/progressIndicator"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <!--  Layout to display the selected image content          -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/showSelectedId"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="Selected Product(s)"
                    app:layout_constraintBottom_toTopOf="@+id/imageSwitcher"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/nextImage"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageSwitcher"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/previousImage"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageSwitcher"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageSwitcher
                    android:id="@+id/imageSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="25dp"
                    android:layout_marginTop="32dp"
                    android:inAnimation="@android:anim/fade_in"
                    android:outAnimation="@android:anim/fade_out"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.52"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/image_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/baseline_chair_24" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/pick_image_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/pick_item_image" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Item Price and Quantity Layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="number"
                        android:layout_weight="1"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemQtyId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="Quantity"
                        android:inputType="number"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_of_item"
                    android:minLines="4"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/upload" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>